# template

./: CMakeLists.txt  complie.bat  main.cpp  readme.md
sdk/vcpkg/installed/x64-windows/debug/lib/: gmock.lib  gtest.lib
sdk/vcpkg/installed/x64-windows/debug/lib/manual-link/: gmock_main.lib  gtest_main.lib
sdk/vcpkg/installed/x64-windows/lib/: gmock.lib  gtest.lib
sdk/vcpkg/installed/x64-windows/lib/manual-link/: gmock_main.lib
sdk/vcpkg/installed/x64-windows/share/gtest/: vcpkg.spdx.json  vcpkg_abi_info.txt
sdk/vcpkg/installed/x64-windows/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
sdk/vcpkg/installed/x64-windows/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
src/: CMakeLists.txt  data.cpp  data.h
tests/: CMakeLists.txt  tests.cpp
